Fix UI and conditions to visible appoinments

--- a/src/app/layouts/main-layout/pages/home/home.component.scss
+++ b/src/app/layouts/main-layout/pages/home/home.component.scss
@@ -11,13 +11,6 @@
     word-break: break-word;
     text-overflow: ellipsis;
   }
-
-  .appointment-table {
-    background-color: var(--section-1st-color);
-    th {
-      font-weight: 500;
-    }
-  }
 }
 .search-user-list {
   max-height: 332px;
@@ -149,6 +142,10 @@
     z-index: 1 !important;
   }
   .appointment-table {
+    background-color: var(--section-1st-color);
+    th {
+      font-weight: 500;
+    }
     .table {
       --bs-table-bg: var(--section-1st-color);
       --bs-table-color: var(--heading-1st-color);
